src/home/banner/index.scss
#banner {
  color: white;
  object-fit: cover;
  background-repeat: no-repeat;

  .topnav {
    padding-top: 1em;
    padding-bottom: 1em;
    overflow: hidden;

    .item {
      color: #f2f2f2;
      float: right;
      text-align: center;
      padding-left: 1em;
      padding-right: 1em;
      text-decoration: none;
      opacity: 1;
    }

    .item.logo {
      float: left;
      font-size: 1.5vmax;
      font-weight: 800;
      padding-left: 10px;
      padding-right: 6px;
    }

    .item.location {
      float: left;
      font-size: 1.5vmax;
      padding-left: 0px;
    }

    .item.link {
      @media only screen and (max-width: 480px) {
        display: none;
      }
    }
  }
}

#banner.inactive {
  background-image: url("../../imgs/table-discussion-bg.png");

  @media only screen and (min-width: 1440px) {
    background-image: url("../../imgs/table-discussion-bg-2x.png");
  }

  .eventInfo {
    display: flex;
    justify-content: center;
    flex-direction: column;
  }

  .tagLine {
    font-size: 2.5vmax;
    text-align: center;
  }

  .stats {
    margin-top: 1vmax;
    margin-bottom: 1vmax;
    border-spacing: 10px;
    display: flex;
    justify-content: center;
    flex-direction: row;

    .item {
      display: flex;
      align-items: center;
      justify-content: center;
      text-align: center;
      letter-spacing: 0px;
      background: rgba(0, 0, 0, 0.4) 0% 0% no-repeat padding-box;
      border: 0.05em solid white;
      border-radius: 0.3em;
      width: 5em;
      height: 5em;
      margin: 6px;
    }

    .item .value {
      font-weight: 600;
      font-size: 1.4vmax;
    }
  }
}

#banner.active {
  padding-bottom: 1vmax;
  background-image: url("../../imgs/abstract-bg.png");

  @media only screen and (min-width: 1440px) {
    background-image: url("../../imgs/abstract-bg-2x.png");
  }

  .upcomingEditionInfo.small {
    margin-top: 1vmax;
    margin-left: 0;
    padding-left: 10px;
    .basicInfo {
      .title {
        margin-top: 0;
        font-size: 1.5vmax;
      }
    }

    .rsvp {
      padding-top: 1vmax;
    }
  }

  .upcomingEditionInfo {
    margin-top: 2vmax;
    margin-left: 4vmax;

    .basicInfo {
      display: inline-block;
      width: 75%;

      @media only screen and (min-width: 1024px) {
        width: calc(90% - 50px);
      }

      .summary {
        font-weight: 600;
      }

      .title {
        margin-top: 0.5vmax;
        font-size: 2.5vmax;
        font-weight: 600;
      }
    }

    .stats {
      margin-top: 1vmax;
      margin-bottom: 1vmax;
      border-spacing: 10px;
      display: flex;
      flex-direction: row;

      .item {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        letter-spacing: 0px;
        background: rgba(0, 0, 0, 0.4) 0% 0% no-repeat padding-box;
        border: 0.05em solid white;
        border-radius: 0.3em;
        width: 4em;
        height: 4em;
        margin: 6px;
      }

      .item .value {
        font-weight: 600;
        font-size: 1vmax;
      }

      .item .text {
        font-size: 0.75vmax;
      }
    }

    .rsvp {
      padding-top: 2vmax;
      vertical-align: top;
      display: inline-block;

      .link {
        color: #008731;
        font-weight: 600;
        background-color: white;
        border-radius: 0.3vmax;
        padding: 0.75vmax 1.5vmax;
        text-decoration: none;
      }
    }

    .talks {
      width: 60%;
      background: rgba(17, 170, 88, 0.5) 0% 0% no-repeat padding-box;
      border-radius: 6px;
      padding: 1vmax;
      margin-top: 2vmax;

      @media only screen and (max-width: 1024px) {
        width: 85%;
      }

      .talkInfo {
        display: inline-block;
        vertical-align: top;
        width: 60%;

        @media only screen and (max-width: 1024px) {
          width: 85%;
        }

        .talk-title {
          font-size: 1.25vmax;
          font-weight: 600;
          padding-bottom: 0.25vmax;
        }

        .timeSlot {
          font-size: 0.7vmax;
          padding-bottom: 0.5vmax;
        }

        .description {
          padding-bottom: 1vmax;
          font-weight: 400;
        }
      }

      .speakerInfo {
        padding-left: 1vmax;
        display: inline-block;

        .pic {
          @media only screen and (max-width: 1024px) {
            display: inline-block;
          }
          height: 6vmax;
          width: 6vmax;
          border-radius: 50%;
        }

        .info {
          text-align: left;
          @media only screen and (max-width: 1024px) {
            padding-left: 1vmax;
            padding-top: 1vmax;
            vertical-align: top;
            display: inline-block;
          }
        }
      }

      .speakers {
        padding-left: 1vmax;
        display: inline-block;

        .speaker + .speaker {
          padding-top: 1vmax;
        }

        .pic {
          display: inline-block;
          height: 4vmax;
          width: 4vmax;
          border-radius: 50%;
        }

        .info {
          padding-top: 0.5vmax;
          padding-left: 1vmax;
          vertical-align: top;
          display: inline-block;
        }
      }

      button {
        border: none;
        outline: none;
        background: none;
        color: white;
        cursor: pointer;
      }

      button:disabled {
        cursor: default;
        opacity: 0.5;
      }

      button + button {
        margin-left: 2px;
      }

      #prev {
        background-image: url("../../imgs/previous.svg");
        background-repeat: no-repeat;
        width: 19px;
        height: 19px;
      }

      #next {
        background-image: url("../../imgs/next.svg");
        background-repeat: no-repeat;
        width: 19px;
        height: 19px;
      }

      .bold {
        font-weight: 600;
      }

      .light {
        font-weight: 100;
      }
    }
  }
}

.recentEditions {
  margin: 1em;
  .title {
    font-size: 1.2vmax;
  }

  .editions {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }
}

